Implement GIF on Automata API
